@@ -315,7 +315,7 @@ def _updateTroves(cfg, applyList, replaceFiles = False, tagScript = None,
     client.applyUpdate(updJob, replaceFiles, tagScript, test = test, 
                        justDatabase = justDatabase,
                        localRollbacks = cfg.localRollbacks,
-                       callback = callback)
+                       callback = callback, autoLockList = cfg.lockTroves)
 
 
 def updateAll(cfg, info = False, depCheck = True, replaceFiles = False,
